# unityasset

./: .gitattributes  .gitignore  CMakeLists.txt  FileDescriptor.cpp  ShaderBlob.cpp  StreamedResourceManipulator.cpp  UnityCompression.cpp  UnityTextureTypes.cpp  UnityTypeSerializer.cpp  WindowsError.cpp  WindowsHandle.cpp  assettest.cpp  class_database_types.rb  cldb_to_xml.rb  make_player_data.cpp  stb_image_write_config.cpp  stb_image_write_config.h  unpack_classdata_tpk.rb
Environment/: Downcastable.cpp  ExternalAssetData.cpp  LinkedEnvironment.cpp  LoadedSerializedAsset.cpp
ExtractUnityTypeData/: CMakeLists.txt  extract_types.cpp
FileContainer/AssetBundle/: AssetBundleBlock.cpp  AssetBundleDirectoryEntry.cpp  AssetBundleFile.cpp
SerializedAsset/: FileIdentifier.cpp  LocalSerializedObjectIdentifier.cpp  SerializedAssetFile.cpp  SerializedObject.cpp  SerializedType.cpp  TypeTree.cpp  TypeTreeNode.cpp
Streams/: MappedFileStreamBackingBuffer.cpp  Stream.cpp  StreamBackingBuffer.cpp
UnityContent/: CMakeLists.txt  ExtractedTextureImage.cpp  HalfFloat.cpp  MeshVertexLayout.cpp  ShaderBlob.cpp  stb_image_write_config.h
UnityContent/Environment/: LoadedSerializedAsset.cpp  ObjectFactory.cpp
UnityContent/include/UnityAsset/: ExtractedTextureImage.h  HalfFloat.h  MeshVertexLayout.h  UnityTextureTypes.h
UnityContent/include/UnityAsset/Environment/: LoadedSerializedAsset.h  ObjectFactory.h
UnitySerialization/: CMakeLists.txt  StreamedResourceManipulator.cpp  UnityAssetConfig.h.in  UnityCompression.cpp  UnityTypeSerializer.cpp
UnitySerialization/FileContainer/AssetBundle/: AssetBundleDirectory.cpp  AssetBundleEntry.cpp  AssetBundleFile.cpp
UnitySerialization/SerializedAsset/: AssetLinker.cpp  Downcastable.cpp  ExternalAssetData.cpp  FileIdentifier.cpp  SerializedAssetFile.cpp  SerializedObject.cpp  TypeTree.cpp
UnitySerialization/Streams/: FileInputOutput.cpp  InMemoryStreamBackingBuffer.cpp  Stream.cpp
UnitySerialization/include/UnityAsset/: UnityCompression.h  UnityTypeSerializer.h
UnitySerialization/include/UnityAsset/FileContainer/AssetBundle/: AssetBundleBlock.h  AssetBundleFile.h
UnitySerialization/include/UnityAsset/SerializedAsset/: AssetLinker.h  Downcastable.h  ExternalAssetData.h  FileIdentifier.h  SerializedAssetFile.h  SerializedObject.h  SerializedType.h
UnitySerialization/include/UnityAsset/Streams/: FileInputOutput.h  Stream.h
classdb/: .gitattributes  LICENSE-classdata.tpk  class_database_types.rb  cldb_to_xml.rb  make_cldb_code.rb  unpack_classdata_tpk.rb
include/UnityAsset/: FileDescriptor.h  ShaderBlob.h  StreamedResourceManipulator.h  UnityEnums.h  UnityTextureTypes.h  UnityTypeSerializer.h  WindowsError.h  WindowsHandle.h
include/UnityAsset/Environment/: Downcastable.h  ExternalAssetData.h  LinkedEnvironment.h  LoadedSerializedAsset.h  ObjectPointer.h
include/UnityAsset/FileContainer/AssetBundle/: AssetBundleDirectory.h  AssetBundleDirectoryEntry.h  AssetBundleEntry.h  AssetBundleFile.h
include/UnityAsset/SerializedAsset/: FileIdentifier.h  LocalSerializedObjectIdentifier.h  SerializedAssetFile.h  SerializedObject.h  SerializedType.h  TypeTree.h  TypeTreeNode.h
include/UnityAsset/Streams/: InMemoryStreamBackingBuffer.h  MappedFileStreamBackingBuffer.h  Stream.h  StreamBackingBuffer.h
lzmadec/: Precomp.h
